Fix access from jackson to deserialzied classes